# PRtoPDF

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/prtopdf/: config.py  formatters.py  generator.py  github_api.py  main.py  pdf_generator.py  sections.py  styles.py
src/prtopdf/configs/: default.json
src/prtopdf/templates/: pr_report.html
