[project]
name = "prtopdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "types-requests>=2.32.4.20250913",
]

[project.scripts]
prtopdf = "prtopdf.main:main"

[tool.isort]
profile = "black"
